--- a/debian/po/sk.po
+++ b/debian/po/sk.po
@@ -1,32 +1,35 @@
-# Dutch translation of dash debconf templates.
-# Copyright (C) 2008-2010 THE PACKAGE'S COPYRIGHT HOLDER
+# Slovak translations for dash package
+# Slovenské preklady pre balík dash.
+# Copyright (C) 2011 THE dash'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the dash package.
-# Thijs Kinkhorst <thijs@debian.org>, 2008.
-# Eric Spreen <erispre@gmail.com>, 2010.
+# Automatically generated, 2011.
+# Slavko <linux@slavino.sk>, 2011.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dash_0.5.5.1\n"
+"Project-Id-Version: dash 0.5.5.1-7.4\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2009-07-27 12:43+0000\n"
-"PO-Revision-Date: 2011-04-26 09:15+0200\n"
-"Last-Translator: Eric Spreen <erispre@gmail.com>\n"
-"Language-Team: Debian l10n Dutch <debian-l10n-dutch@lists.debian.org>\n"
+"PO-Revision-Date: 2011-01-30 18:26+0100\n"
+"Last-Translator: Slavko <linux@slavino.sk>\n"
+"Language-Team: Slovak <nomail>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: sk\n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "Use dash as the default system shell (/bin/sh)?"
-msgstr "Wilt u dash gebruiken als de standaard systeemshell (/bin/sh)?"
+msgstr "Použiť dash ako východzí systémový shell (/bin/sh)?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
-msgstr "De systeemshell is de standaard commandovertolker voor shell scripts."
+msgstr "Systémový shell je východzí príkazový interpret shellových skriptov."
 
 #. Type: boolean
 #. Description
@@ -35,6 +38,5 @@ msgid ""
 "Using dash as the system shell will improve the system's overall "
 "performance. It does not alter the shell presented to interactive users."
 msgstr ""
-"Als u dash als de systeemshell gebruikt, zal dit de prestaties van het "
-"systeem ten goede komen. Het verandert niets aan de shell die interactieve "
-"gebruikers te zien krijgen."
+"Použitie dash ako systémového shellu celkovo zlepší výkon systému. Toto "
+"nastavenie nijako neovplyvní interaktívny shell jednotlivých používateľov."
