--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -12,6 +12,7 @@ msgstr ""
 "PO-Revision-Date: 2011-04-26 09:15+0200\n"
 "Last-Translator: Eric Spreen <erispre@gmail.com>\n"
 "Language-Team: Debian l10n Dutch <debian-l10n-dutch@lists.debian.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
