--- a/debian/po/pl.po
+++ b/debian/po/pl.po
@@ -1,35 +1,35 @@
-# Slovak translations for dash package
-# Slovenské preklady pre balík dash.
-# Copyright (C) 2011 THE dash'S COPYRIGHT HOLDER
+# Translation of dash debconf templates to Polish.
 # This file is distributed under the same license as the dash package.
-# Automatically generated, 2011.
-# Slavko <linux@slavino.sk>, 2011.
 #
+# Michał Kułach <michal.kulach@gmail.com>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: dash 0.5.5.1-7.4\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2009-07-27 12:43+0000\n"
-"PO-Revision-Date: 2011-01-30 18:26+0100\n"
-"Last-Translator: Slavko <linux@slavino.sk>\n"
-"Language-Team: Slovak <nomail>\n"
-"Language: sk\n"
+"PO-Revision-Date: 2012-01-31 22:24+0100\n"
+"Last-Translator: Michał Kułach <michal.kulach@gmail.com>\n"
+"Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
+"Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+"X-Generator: Lokalize 1.2\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2);\n"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "Use dash as the default system shell (/bin/sh)?"
-msgstr "Použiť dash ako východzí systémový shell (/bin/sh)?"
+msgstr "Użyć dasha jako domyślnej powłoki systemowej (/bin/sh)?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
-msgstr "Systémový shell je východzí príkazový interpret shellových skriptov."
+msgstr ""
+"Powłoka systemowa jest domyślnym interpreterem poleceń dla skryptów powłoki"
 
 #. Type: boolean
 #. Description
@@ -38,5 +38,5 @@ msgid ""
 "Using dash as the system shell will improve the system's overall "
 "performance. It does not alter the shell presented to interactive users."
 msgstr ""
-"Použitie dash ako systémového shellu celkovo zlepší výkon systému. Toto "
-"nastavenie nijako neovplyvní interaktívny shell jednotlivých používateľov."
+"Użycie programu dash jako powłoki systemowej poprawi ogólną wydajność "
+"systemu. Wybranie tej opcji nie zmieni powłoki zwykłych użytkowników."
