Import Debian changes 0.5.7-4
dash (0.5.7-4) unstable; urgency=low

  * Thx Michael Gilbert for NMU.
    * 0006-JOBS-address-format-security-build-error.diff: new: address
      format-security build error (patch from Simon Ruderich).
  * debian/rules: make DEB_BUILD_OPTIONS=diet build working again.
  * debian/diff/0007-EVAL-Report-I-O-error-on-stdout.diff: new: eval: report
    I/O error on stdout (closes: #690473).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+dash (0.5.7-4) unstable; urgency=low
+
+  * Thx Michael Gilbert for NMU.
+    * 0006-JOBS-address-format-security-build-error.diff: new: address
+      format-security build error (patch from Simon Ruderich).
+  * debian/rules: make DEB_BUILD_OPTIONS=diet build working again.
+  * debian/diff/0007-EVAL-Report-I-O-error-on-stdout.diff: new: eval: report
+    I/O error on stdout (closes: #690473).
+
+ -- Gerrit Pape <pape@smarden.org>  Wed, 08 Jan 2014 11:54:11 +0000
+
 dash (0.5.7-3+nmu1) unstable; urgency=medium
 
   * Non-maintainer upload.
