--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+dash (0.5.8-2.1) unstable; urgency=low
+
+  * Non-maintainer upload.
+
+  [ Marcin Juszkiewicz ]
+  * Ensure correct strip is called when cross-building (closes: #665965)
+
+ -- Helmut Grohne <helmut@subdivi.de>  Sat, 09 Jan 2016 18:35:21 +0100
+
 dash (0.5.8-2) experimental; urgency=medium
 
   * debian/rules: pass --disable-lineno option to configure (thx Sven
