--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dash (0.5.8-2.8) UNRELEASED; urgency=medium
+
+  * Ship a /bin/sh symlink (Closes: #888235).
+
+ -- Andrew Shadura <andrewsh@debian.org>  Wed, 24 Jan 2018 07:09:34 +0100
+
 dash (0.5.8-2.7) unstable; urgency=medium
 
   [ James Cowgill ]
