--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,12 @@
-dash (0.5.8-3) UNRELEASED; urgency=medium
+dash (0.5.8-3) unstable; urgency=medium
 
   [ Simon McVittie ]
-  * Add an autopkgtest to verify that /bin/sh remains usable
+  * Add an autopkgtest to verify that /bin/sh remains usable.
 
   [ Andrew Shadura ]
-  * Add dash.preinst to clean
+  * Add dash.preinst and friends to clean.
 
- -- Andrew Shadura <andrewsh@debian.org>  Wed, 24 Jan 2018 13:24:47 +0100
+ -- Andrew Shadura <andrewsh@debian.org>  Wed, 24 Jan 2018 13:25:30 +0100
 
 dash (0.5.8-2.9) unstable; urgency=medium
 
