--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
 dash (0.5.10.2-2) UNRELEASED; urgency=medium
 
+  [ Ondřej Nový ]
   * d/changelog: Remove trailing whitespaces
   * d/control: Add Vcs-* field
+
+  [ Guillaume Charifi ]
+  * dash.preinst: copy(): Do not die if the destination does not exist
+    (Closes: #916038).
 
  -- Ondřej Nový <onovy@debian.org>  Mon, 01 Oct 2018 10:37:55 +0200
 
