--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,17 @@
-dash (0.5.10.2-2) UNRELEASED; urgency=medium
+dash (0.5.10.2-2) unstable; urgency=medium
 
   [ Ondřej Nový ]
-  * d/changelog: Remove trailing whitespaces
-  * d/control: Add Vcs-* field
+  * d/changelog: Remove trailing whitespaces.
+  * d/control: Add Vcs-* field.
 
   [ Guillaume Charifi ]
   * dash.preinst: copy(): Do not die if the destination does not exist
     (Closes: #916038).
 
- -- Ondřej Nový <onovy@debian.org>  Mon, 01 Oct 2018 10:37:55 +0200
+  [ You-Sheng Yang ]
+  * Enable large file support when available (Closes: #916255).
+
+ -- Andrej Shadura <andrewsh@debian.org>  Wed, 12 Dec 2018 10:42:22 +0100
 
 dash (0.5.10.2-1) unstable; urgency=medium
 
