--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-dash (0.5.10.2+git20200120+f30bd15-1) experimental; urgency=medium
+dash (0.5.11+git20200708+dd9ef66) experimental; urgency=medium
 
-  * New upstream snapshot.
+  * New upstream snapshot
+    (Closes: #541544, #541642, #692611, #930805).
   * Drop patches applied upstream.
 
- -- Andrej Shadura <andrewsh@debian.org>  Mon, 30 Mar 2020 11:54:18 +0200
+ -- Andrej Shadura <andrewsh@debian.org>  Sat, 08 Aug 2020 15:13:49 +0200
 
 dash (0.5.10.2-7) unstable; urgency=medium
 
