--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dash (0.5.11+git20210120+802ebd4-1) unstable; urgency=medium
+
+  * New upstream snapshot.
+  * Drop a patch applied upstream.
+
+ -- Andrej Shadura <andrewsh@debian.org>  Thu, 04 Mar 2021 10:22:32 +0100
+
 dash (0.5.11+git20200708+dd9ef66-5) unstable; urgency=medium
 
   * Actually set PATH_MAX for Hurd.
