--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dash (0.5.11+git20210903+057cd650a4ed-3) unstable; urgency=medium
+
+  * Revert "Enable libedit".
+  * Revert "Re-enable LINENO support".
+
+ -- Andrej Shadura <andrewsh@debian.org>  Wed, 03 Nov 2021 11:51:39 +0100
+
 dash (0.5.11+git20210903+057cd650a4ed-2) unstable; urgency=medium
 
   * Re-enable LINENO support (Closes: #842242)/
