--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,23 @@
+dash (0.5.11+git20210903+057cd650a4ed-4) unstable; urgency=medium
+
+  [ Andrej Shadura ]
+  * Stop using debconf to select the default /bin/sh.
+  * Don’t use external fnmatch/glob.
+  * Apply upstream patch to check executable bit when searching path
+    (Closes: #874264)
+  * Drop po files from debian/copyright.
+  * Sort debian/copyright.
+  * Update copyright years.
+
+  [ Johannes Schauer Marin Rodrigues ]
+  * Replace add-shell/remove-shell with declarative shells.d trigger
+    (Closes: #1004172)
+  * Allow downgrades to dash versions before it started using update-shells.
+  * debian/dash.postinst: reproducible symlink mtime using symlink target
+    mtime.
+
+ -- Andrej Shadura <andrewsh@debian.org>  Thu, 03 Mar 2022 17:40:59 +0100
+
 dash (0.5.11+git20210903+057cd650a4ed-3) unstable; urgency=medium
 
   * Revert "Enable libedit".
