--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+dash (0.5.11+git20210903+057cd650a4ed-6) unstable; urgency=medium
+
+  [ Johannes Schauer Marin Rodrigues ]
+  * debian/dash.postinst: fix missing ].
+  * Add autopkgtest installing dash into a fresh chroot.
+
+ -- Andrej Shadura <andrewsh@debian.org>  Fri, 04 Mar 2022 22:19:03 +0100
+
 dash (0.5.11+git20210903+057cd650a4ed-5) unstable; urgency=medium
 
   [ Johannes Schauer Marin Rodrigues ]
