--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+dash (0.5.12-6) unstable; urgency=medium
+
+  [ Johannes Schauer Marin Rodrigues ]
+  * debian/tests/mmdebstrap: use copy-host-apt-sources-and-preferences hook.
+     - use the hook provided by mmdebstrap instead of cooking up our own
+       thing, thus preventing code duplication
+     - this also copies over apt pinning rules which were missing before
+
+ -- Andrej Shadura <andrewsh@debian.org>  Wed, 21 Jun 2023 13:28:50 +0200
+
 dash (0.5.12-5) unstable; urgency=medium
 
   [ Helmut Grohne ]
